--- a/pom.xml
+++ b/pom.xml
@@ -144,16 +144,17 @@
     </build>
     
     <distributionManagement>
-        <repository>
-            <id>nexus-repository</id>
-            <name>Release Repository</name>
-            <url>http://192.168.33.10:8081/#admin/repository/repositories:maven-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus-snapshot-repository</id>
-            <name>Snapshot Repository</name>
-            <url>http://192.168.33.10:8081/#admin/repository/repositories:maven-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <repository>
+        <id>nexus-repository</id>
+        <name>Release Repository</name>
+        <url>http://192.168.33.10:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>nexus-snapshot-repository</id>
+        <name>Snapshot Repository</name>
+        <url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
+
     
 </project>
