--- a/pom.xml
+++ b/pom.xml
@@ -145,12 +145,12 @@
     
     <distributionManagement>
     <repository>
-        <id>nexus-repository</id>
+        <id>maven-releases</id>
         <name>Release Repository</name>
         <url>http://192.168.33.10:8081/repository/maven-releases/</url>
     </repository>
     <snapshotRepository>
-        <id>nexus-snapshot-repository</id>
+        <id>maven-snapshots</id>
         <name>Snapshot Repository</name>
         <url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
